313 ==> 384614 - Digikam redeye does not work on some images.
314 ==> 390487 - Open in File Manager function enhancement.
315 ==> 401941 - Beta3 / beta2 launches but hangs... Now fear for DB!
316 ==> 400941 - Crash with segmentation fault when writing a large amount of metadata to images.
317 ==> 341510 - Imported GPX Files generate an error when GPX-File contains 'unusual' tags.
318 ==> 432789 - Imported Pictures (RAW, CR3, Canon M6 Mark II) doesn´t have the rigth Rotation.
319 ==> 432957 - Some tags appear beneath "People" parent tag in People view/panel.
320 ==> 430761 - Windows digikam.exe application icon missing.
321 ==> 433060 - Inconsistency between metadata displayed and metadata taken in account to rename.
322 ==> 433183 - Migrate from "MySQL Server" database corrupts face/people metadata.
323 ==> 433172 - Files do not disappear if cut.
324 ==> 433264 - Patch for missing QPainterPath in qtavcodecs.cpp.
325 ==> 431951 - UI lockup for upwards of 15 seconds while just scrolling album views and selecting images.
326 ==> 432257 - Spinning Pinwheel Scrolling through Thumbnails.
327 ==> 433350 - 'reread metadata from file' don't clean up ImageProperties table if the related fields don't exist anymore in the file.
328 ==> 433311 - New or modified root album folders are always placed into local collections (= Type No 1 in table album roots).
329 ==> 183103 - Allow to change Presentation tool delay on the fly [patch].
330 ==> 433331 - Display Thumbnails greater than 9080 missing with removable disk Off line (Ok On Line).
331 ==> 424051 - Please add search for images without captions.
332 ==> 433653 - Please Add xattr support for metadata.
333 ==> 431748 - Feature Request: Search by month/day independent of year.
334 ==> 433573 - View - Separate Item - By Month : View by month only (not month year).
335 ==> 433727 - Does not show exif info from Panasonic FZ30 RAW file, inspite on Editor mode it's ok.
336 ==> 