@@ -375,4 +375,5 @@ BUGFIXES:
 333 ==> 431748 - Feature Request: Search by month/day independent of year.
 334 ==> 433573 - View - Separate Item - By Month : View by month only (not month year).
 335 ==> 433727 - Does not show exif info from Panasonic FZ30 RAW file, inspite on Editor mode it's ok.
-336 ==> 
+336 ==> 433423 - 'byline' into xmp panel editor is called 'creator' into Advanced Search.
+337 ==> 
